--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "chart.js": "^3.9.1",
     "formik": "^2.2.9",
     "history": "^5.3.0",
+    "jsoneditor": "^9.9.2",
+    "jsoneditor-react": "^3.1.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
